== 0.5.2

* 1 minor enhancement
  * added support for custom tostring methods for classes

== 0.5.1 2010-03-05

* 2 minor enhancements
  * if an argument is fully specified, should not append namespace
  * better handling of boolean values

== 0.5.0 2010-03-03

* 1 major enhancement
  * initial release and tested with OpenCV bindings for Lua
