@@ -1,3 +1,3 @@
 module Dub
-  VERSION = '0.5.1'
+  VERSION = '0.5.2'
 end
